// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<p
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1o5r80t",
        "next": undefined,
        "styles": "
    color: #030D36;
    font-size: 1.125rem;
  ",
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  hello
</p>
`;

exports[`Header renders correctly with className 1`] = `
<p
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1o5r80t",
        "next": undefined,
        "styles": "
    color: #030D36;
    font-size: 1.125rem;
  ",
      },
      "foo",
      undefined,
      undefined,
    ]
  }
>
  hello
</p>
`;
